# coreason_inference_engine

./: .deptry.toml  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  NOTICE  README.md  final_tests.py  final_tests2.py  final_tests3.py  fix.py  fix2.py  fix_adapters.py  fix_all.py  fix_all2.py  fix_all3.py  fix_all4.py  fix_all5.py  fix_all6.py  fix_all7.py  fix_all_engine_tests.py  fix_all_final.py  fix_ci_errors.py  fix_ci_errors_final.py  fix_engine.py  fix_engine_dict.py  fix_engine_span.py  fix_engine_syntax.py  fix_engine_tests_final.py  fix_engine_tests_final2.py  fix_engine_tests_final3.py  fix_engine_types.py  fix_engine_types2.py  fix_engine_unbounds.py  fix_epistemic.py  fix_everything.py  fix_everything2.py  fix_final_few_tests.py  fix_final_one_test.py  fix_local_backpressure.py  (+17 more)
docs/: api.md  architecture.md  audit_report.md  index.md
src/coreason_inference_engine/: __init__.py  context.py  engine.py  interfaces.py  main.py
src/coreason_inference_engine/adapters/: __init__.py  anthropic_adapter.py  dto.py  http_adapter.py  local_vllm_adapter.py  manifest_adapters.py  openai_adapter.py
src/coreason_inference_engine/utils/: __init__.py  logger.py  network.py  telemetry.py  validation.py
tests/: test_anthropic_adapter.py  test_context.py  test_cost.py  test_engine.py  test_engine_reflex.py  test_engine_schema.py  test_engine_slicing.py  test_hallucinated_tool.py  test_http_adapter.py  test_interfaces.py  test_local_vllm_adapter.py  test_logger.py  test_main.py  test_network.py  test_openai_adapter.py  test_telemetry.py  test_utils.py  test_validation.py
tests/adapters/: test_dto.py  test_manifest_adapters.py
