[build-system]
requires = [
    "hatchling",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
name = "coreason_inference_engine"
dynamic = [
    "version",
]
description = "The stateless cognitive bridge connecting deterministic rules to LLMs"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Akshaya M", email = "akshaya.movvar@coreason.ai" },
]
dependencies = [
    "loguru>=0.7.2",
    "coreason-manifest",
    "pydantic",
    "httpx",
    "ijson",
    "tiktoken",
    "typer>=0.24.1",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
]
classifiers = [
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/CoReason-AI/coreason_inference_engine"
Repository = "https://github.com/CoReason-AI/coreason_inference_engine"
Documentation = "https://github.com/CoReason-AI/coreason_inference_engine"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "zensical",
    "mypy>=1.19.1",
    "pytest-asyncio",
    "pytest-benchmark",
    "deptry",
    "deepdiff",
    "hypothesis",
    "syrupy",
    "mkdocstrings-python",
    "types-pyyaml>=6.0.12.20250915",
    "tzdata>=2025.3",
    "pytest-xdist>=3.6.1",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/coreason_inference_engine",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP",
    "SIM",
    "RUF",
    "ARG",
    "C4",
    "PT",
    "TCH",
    "FA",
    "PIE",
    "RET",
    "PERF",
    "FURB",
    "LOG",
    "N",
    "A",
    "S",
]
ignore = [
    "S101",
    "TC001",
    "TC002",
    "TC003",
    "UP037",
]

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
plugins = [
    "pydantic.mypy",
]
overrides = [
    { module = "ijson.*", ignore_missing_imports = true },
    { module = "vllm", ignore_missing_imports = true },
    { module = "vllm.*", ignore_missing_imports = true },
    { module = "torch", ignore_missing_imports = true },
    { module = "torch.*", ignore_missing_imports = true },
    { module = "outlines", ignore_missing_imports = true },
    { module = "outlines.*", ignore_missing_imports = true },
]

[tool.pytest.ini_options]
addopts = ""
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.deptry.per_rule_ignores]
DEP002 = [
    "httpx",
    "ijson",
    "pydantic",
    "tiktoken",
    "coreason-manifest",
    "fastapi",
    "uvicorn",
]
DEP001 = [
    "vllm",
    "torch",
    "outlines",
]
